# mlb_statsapi_data_platform

./: .gitignore  .pre-commit-config.yaml  BDD_TEST_COMPLETION_STATUS.md  CLAUDE.md  COMPLETE_TRANSFORMATION_IMPLEMENTATION.md  JSONB_PARSING_FIX.md  Makefile  PHASE_3_SUMMARY.md  POC_BACKLOG.md  PROGRESS.md  PROJECT_STATUS.md  README.md  RESUME.md  RESUME_ON_NEW_MACHINE.md  SCHEMA_MAPPING.md  SESSION_2025_11_16.md  SESSION_2025_11_16_COMPLETE.md  SESSION_2025_11_16_COMPLETE_FINAL.md  SESSION_2025_11_16_PART2.md  SESSION_2025_11_16_PART3.md  SESSION_DOCKER_SPARK_IMPLEMENTATION.md  SESSION_SUMMARY.md  TESTING_GUIDE.md  TEST_PROGRESS_SUMMARY.md  TRANSFORMATION_GUIDE.md  TRANSFORMATION_REFACTOR_SUMMARY.md  TRANSFORM_ORCHESTRATION_IMPLEMENTATION.md  UI_TOOLS_GUIDE.md  docker-compose.yaml  pyproject.toml
.github/terraform/: .env.template  .gitignore  README.md  main.tf  variables.tf
config/jobs/: game_live_streaming.yaml  game_single.yaml  schedule_polling.yaml  season_daily.yaml
config/k8s/: README.md  deployment-live-poller.yaml  namespace.yaml  secrets-template.yaml  serviceaccount.yaml
config/workflows/: README.md  cronworkflow-daily.yaml  cronworkflow-pipeline-daily.yaml  cronworkflow-pipeline-live.yaml  cronworkflow-schedule-polling.yaml  workflow-daily-pipeline.yaml  workflow-game-transform.yaml  workflow-pipeline-backfill.yaml  workflow-pipeline-daily.yaml  workflow-schedule-transform.yaml  workflow-season-transform-local.yaml  workflow-season-transform.yaml
docker/: Dockerfile.ingestion  Dockerfile.spark
docs/: ADDITIONAL_TABLES_NEEDED.md  API_METADATA_INGESTION.md  BUILD_SYSTEM.md  CALLABLE_PATTERN.md  DATABASE_CONTEXT_MANAGERS.md  DEFENSIVE_UPSERT.md  IMPLEMENTATION_STATUS.md  KAPPA_ARCHITECTURE.md  NEXT_STEPS.md  ORM_USAGE_EXAMPLES.md  SESSION_SUMMARY.md  STUB_DATA_ANALYSIS.md  TIMESTAMP_STRATEGY.md  TRANSFORMATION_ARCHITECTURE.md  venue_enrichment.md
examples/: deequ_validation_example.py  end_to_end_pipeline.py  orm_context_manager.py  orm_example.py  raw_ingestion_example.py  test_ingest_season.py  test_season_transform.py  transform_metadata_example.py  transformation_examples.py
examples/spark_jobs/: test_refactored_transforms.py  test_statcast_extraction.py  transform_game.py  transform_game_complete.py  transform_schedule.py  transform_season.py
k8s/: minio-deployment.yaml  postgres-deployment.yaml  rbac.yaml  redis-deployment.yaml  spark-operator-values.yaml  test-spark-job.yaml  test-workflow.yaml
scripts/: analyze_stub_structure.py  init_database.sh  k3d-cluster.sh  repair_k3s.sh  test_transform.sh
sql/migrations/: V1__initial_schema.sql  V2__game_live_tables.sql  V2__venue_enrichment.sql  V3__raw_tables.sql  V4__consolidate_and_enhance_tables.sql  V5__person_and_team_normalized_tables.sql  V6__game_timestamps_table.sql
src/mlb_data_platform/: __init__.py  _version.py  cli.py
src/mlb_data_platform/database/: __init__.py  config.py  session.py
src/mlb_data_platform/ingestion/: __init__.py  client.py  config.py  raw_storage.py  template.py
src/mlb_data_platform/models/: __init__.py  game_live.py  raw.py
src/mlb_data_platform/orchestration/: __init__.py  argo_client.py
src/mlb_data_platform/pipeline/: __init__.py  extractors.py  live_poller.py  live_poller_daemon.py  orchestrator.py  storage_adapter.py
tests/: conftest.py
tests/bdd/: environment.py
tests/bdd/steps/: common_steps.py  (+4 more)
tests/integration/: test_e2e_transformation.py  test_game_ingestion.py  test_schedule_ingestion.py  test_season_ingestion.py
tests/unit/: test_argo_client.py  test_database_config.py  test_database_session.py  test_ddl_generator.py  test_deequ_validator.py  test_ingestion_client.py  test_ingestion_config.py  test_person_transform.py  test_pipeline_extractors.py  test_pipeline_live_poller.py  test_pipeline_orchestrator.py  test_schema_mapping.py  test_schema_models.py  test_schema_registry.py  test_storage_adapter.py  test_storage_extraction.py  test_storage_postgres.py  test_team_transform.py  test_template.py  test_upsert.py  test_venue_scraper.py
(+44 files in other folders)
